--- a/portfolio.html
+++ b/portfolio.html
@@ -88,24 +88,38 @@
           <!-- Плиточные елементы -->
           <ul class="work-element">
             <li class="work-list">
-              <img
-                src="./images/portfolio/website.jpg"
-                alt="website"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/website.jpg"
+                  alt="website"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">Технокряк</h2>
                 <p class="task-types">Веб-сайт</p>
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/design.jpg"
-                alt="design"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/design.jpg"
+                  alt="design"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -114,12 +128,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/app.jpg"
-                alt="app"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/app.jpg"
+                  alt="app"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Ресторан <span lang="en">Seafood</span>
@@ -128,12 +149,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/marketing.jpg"
-                alt="marketing"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/marketing.jpg"
+                  alt="marketing"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Проект <span lang="en">Prime</span>
@@ -142,12 +170,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/second-app.jpg"
-                alt="app"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/second-app.jpg"
+                  alt="app"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Проект <span lang="en">Boxes</span>
@@ -156,12 +191,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/second-website.jpg"
-                alt="website"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/second-website.jpg"
+                  alt="website"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 lang="en" class="description-work">
                   Inspiration has no Borders
@@ -170,12 +212,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/second-design.jpg"
-                alt="design"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/second-design.jpg"
+                  alt="design"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Издание <span lang="en">Limited Edition</span>
@@ -184,12 +233,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/second-marketing.jpg"
-                alt="marketing"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/second-marketing.jpg"
+                  alt="marketing"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 class="description-work">
                   Проект <span lang="en">LAB</span>
@@ -198,12 +254,19 @@
               </div>
             </li>
             <li class="work-list">
-              <img
-                src="./images/portfolio/third-app.jpg"
-                alt="app"
-                width="370"
-                height="294"
-              />
+              <div class="work-list-blok">
+                <img
+                  src="./images/portfolio/third-app.jpg"
+                  alt="app"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="work-element-name">
                 <h2 lang="en" class="description-work">Growing Business</h2>
                 <p class="task-types">Приложение</p>
