--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <ul class="page-nav">
             <li class="menu-item">
               <a class="menu-link current" href="">Студия</a>
+              <!-- <div class="line"></div> -->
             </li>
             <li class="menu-item">
               <a class="menu-link" href="./portfolio.html">Портфолио</a>
@@ -140,6 +141,9 @@
                 alt="Скелет документа"
                 width="370"
               />
+              <div class="command-item-wraper">
+                <p class="text-wraper">ДЕСКТОПНІ ДОДАТКИ</p>
+              </div>
             </li>
             <li class="command-item">
               <img
@@ -147,6 +151,9 @@
                 alt="Адаптивный дизайн приложения"
                 width="370"
               />
+              <div class="command-item-wraper">
+                <p class="text-wraper">МОБІЛЬНІ ДОДАТКИ</p>
+              </div>
             </li>
             <li class="command-item">
               <img
@@ -154,6 +161,9 @@
                 alt="Подбор любого цвета"
                 width="370"
               />
+              <div class="command-item-wraper">
+                <p class="text-wraper">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
+              </div>
             </li>
           </ul>
         </div>
