--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" class="main-button">Заказать услугу</button>
+        <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
       </section>
       <!-- Наши преимущества -->
       <section class="benefits">
@@ -475,5 +475,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-button" data-modal-close>
+          <svg class="modal-close-button-icon" width="11" height="11" >
+            <use href="./images/symbol-defs.svg#icon-close-modal" ></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
