--- a/index.html
+++ b/index.html
@@ -472,8 +472,19 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h3 class="footer-subscribe">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
+          <form>
+            <input class="form-email" type="password" name="password" id="user_password" />
+            <button type="submit" class="button-send-footer">Подписаться <svg class="icon-send" width="24" height="24">
+            <use href="./images/symbol-defs.svg#icon-send"></use>
+            </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
