--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
+        <button type="button" class="main-button" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
       <!-- Наши преимущества -->
       <section class="benefits">
@@ -472,13 +474,21 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="container-subscribe">
           <h3 class="footer-subscribe">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
-          <form>
-            <input class="form-email" type="password" name="password" id="user_password" />
-            <button type="submit" class="button-send-footer">Подписаться <svg class="icon-send" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-send"></use>
-            </svg>
+          <form class="form-footer">
+            <input
+              class="form-email"
+              type="email"
+              name="email"
+              id="user_email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="button-send-footer">
+              Подписаться
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
             </button>
           </form>
         </div>
@@ -488,8 +498,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
-          <svg class="modal-close-button-icon" width="11" height="11" >
-            <use href="./images/symbol-defs.svg#icon-close-modal" ></use>
+          <svg class="modal-close-button-icon" width="11" height="11">
+            <use href="./images/symbol-defs.svg#icon-close-modal"></use>
           </svg>
         </button>
       </div>
