--- a/index.html
+++ b/index.html
@@ -483,7 +483,6 @@
               name="email"
               placeholder="E-mail"
               required
-              
             />
           </label>
           <button type="submit" class="button-send-footer">
@@ -522,18 +521,55 @@
             <use href="./images/symbol-defs.svg#icon-close-modal"></use>
           </svg>
         </button>
+        <span class="modal-form-text"
+          >Залиште свої дані, ми вам передзвонимо</span
+        >
         <form class="modal-form">
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Ім'я</span>
-            <input type="text" name="user_name" class="modal-form-input" required pattern="^[a-zA-Z а-яА-Я]+" minlength="2" />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user_name"
+                class="modal-form-input"
+                required
+                pattern="^[a-zA-Z а-яА-Я]+"
+                minlength="2"
+              />
+              <svg class="modal-form-input-icon" width="13" height="13">
+                <use href="./images/symbol-defs.svg#icon-people"></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Телефон</span>
-            <input type="tel" name="user_phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user_phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-input-icon" width="13" height="13">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Пошта</span>
-            <input type="email" name="user_email" class="modal-form-input" required />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="email"
+                name="user_email"
+                class="modal-form-input"
+                required
+              />
+              <svg class="modal-form-input-icon" width="13" height="13">
+                <use href="./images/symbol-defs.svg#icon-people"></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc">Коментар</span>
@@ -543,7 +579,12 @@
               placeholder="Введіть текст"
             ></textarea>
           </label>
-          <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check" />
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user_policy"
+            class="modal-form-check"
+          />
           <label for="user-policy" class="modal-form-check-desc"
             >Погоджуюся з розсилкою та приймаю<a href=""
               >Умови договору</a
