--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,24 @@
             </li>
           </ul>
         </div>
+        <form class="form-footer">
+          <label>
+            <span class="footer-subscribe">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
+            <input
+              class="form-email"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            />
+          </label>
+          <button type="submit" class="button-send-footer">
+            Подписаться
+            <svg class="icon-send" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
