--- a/index.html
+++ b/index.html
@@ -513,8 +513,7 @@
       </div>
     </footer>
     <!-- MODAL -->
-    <!-- is-hidden -->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
           <svg class="modal-close-button-icon" width="11" height="11">
@@ -583,10 +582,10 @@
             id="user-policy"
             type="checkbox"
             name="user_policy"
-            class="modal-form-check"
+            class="modal-form-check checkbox"
           />
           <label for="user-policy" class="modal-form-check-desc"
-            >Погоджуюся з розсилкою та приймаю<a href=""
+            >Погоджуюся з розсилкою та приймаю &nbsp;<a href=""
               >Умови договору</a
             ></label
           >
