--- a/index.html
+++ b/index.html
@@ -585,7 +585,9 @@
             class="modal-form-check checkbox"
           />
           <label for="user-policy" class="modal-form-check-desc"
-            >Погоджуюся з розсилкою та приймаю &nbsp;<a href=""
+            >Погоджуюся з розсилкою та приймаю &nbsp;<a
+              class="modal-link-contract"
+              href=""
               >Умови договору</a
             ></label
           >
